<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second" />
    
    <Button 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/back"
    	android:id="@+id/bBack"    
    />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/companytwo" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stockpricetwo" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/petwo" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marketcaptwo" />
    
    <Button 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/yahoo"
    	android:id="@+id/bDetails"    
    />

</LinearLayout>